@@ -13,6 +13,7 @@
 	ADDED - Warning for maps that contain OVERLIBGRAPH but not 'HTMLSTYLE overlib'
 	ADDED - SCALE will accept values below 0, and also above 100
 	ADDED - USESCALE has two new options: absolute and percent, which allows you to have a SCALE of absolute values
+	ADDED - New datasource plugin to support statistics from TheWitness's DSStats Cacti Plugin. This gets you daily,weekly,monthly and annual stats with no complicated rrdtool stuff.
 
 0.96a	FIXED - New z-ordering code did not work correctly on PHP4. This broke (at least) the editor. (thanks toe_cutter)
 	FIXED - \n is no longer treated as a newline in TARGETs (thanks NetAdmin)
